Fix wrong color for closed PR

--- a/docs/GHE.user.css
+++ b/docs/GHE.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        GitHub Dark + GHE
 @namespace   StylishThemes
-@version     1.0.12
+@version     1.0.13
 @homepageURL https://github.com/StylishThemes/GitHub-Dark
 @updateURL   https://raw.githubusercontent.com/apcorc/stylish/master/docs/GHE.user.css
 @license     CC-BY-SA-4.0
@@ -9617,7 +9617,7 @@
     }
 
     .octicon.octicon-git-pull-request.closed {
-        fill: #F5A623;
+        fill: #FF6669;
     }
 
     .octicon.octicon-git-merge.merged  {
